--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "chithi+",
+  "name": "chithi-plus-monorepo",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "description": "Project root for Chithi+",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node backend/server.js",
+    "build": "npm install --prefix backend"
   },
-  "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
