--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
-  "name": "chithi-plus-monorepo",
-  "version": "1.0.0",
+  "name": "chithi-plus-frontend",
   "private": true,
-  "description": "Project root for Chithi+",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node backend/server.js",
-    "build": "npm install --prefix backend"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   },
   "engines": {
     "node": ">=18.0.0"
